# VRProject

./: .gitignore  CMakeLists.txt  Readme.md
Core/: CMakeLists.txt  camera.h  main.cpp  object.h
Core/objects/: pawn.mtl
Core/objects/room/: room_full.mtl
Core/shaders/: Background_CubeMap_Fragment_Shader.frag  Background_CubeMap_Vertex_Shader.vert  Checkers_Fragment_Shader.frag  Checkers_Vertex_Shader.vert  Debug_Sphere_Fragment_Shader.frag  Debug_Sphere_Vertex_Shader.vert  FragmentShader.frag  Generic_Fragment_Shader.frag  Generic_Vertex_Shader.vert  Globe_Fragment_Shader.frag  Refractive_Fragment_Shader.frag  Refractive_Vertex_Shader.vert  Room_Fragment_Shader.frag  Room_Vertex_Shader.vert
LAB03/: CMakeLists.txt  camera.h
LAB03/exercices/: object.h
LAB03/exercices/ex01/: ex01.cpp
